--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,7 +1,13 @@
 #Ports 8080 and 8081 were already set
 server.port=8082
 
-# setting opaque token configuration
+# setting opaque token configuration to interact with introspection endpoint
 spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://localhost:8081/token/introspect
-spring.security.oauth2.resourceserver.opaquetoken.client-id=client1
-spring.security.oauth2.resourceserver.opaquetoken.client-secret=abcde12345
+
+
+#Even with endpoint /introspection being not protected, Most recent versions of Spring Security demands cliente_id and cliente_secret as not_null anyway
+spring.security.oauth2.resourceserver.opaquetoken.client-id=test
+spring.security.oauth2.resourceserver.opaquetoken.client-secret= test
+
+# Right client-id -> client1
+# Right client-secret -> abcde12345
