CI: Implement Java CI pipeline with Gradle and improve configuration documentation
- Added GitHub Actions workflow to execute Gradle build and tests on push and pull request events
- Enhanced application.properties documentation with detailed comments regarding client credentials management
- Applied minor improvements to test annotations and inline comments for better clarity and maintainability

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+
+
+
+
 #Ports 8080 and 8081 were already set
 server.port=8082
 
@@ -5,9 +9,13 @@ server.port=8082
 spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://localhost:8081/token/introspect
 
 
-#Even with endpoint /introspection being not protected, Most recent versions of Spring Security demands cliente_id and cliente_secret as not_null anyway
+#Even with endpoint '/introspection' being not protected, Spring Security demands cliente_id and cliente_secret as not_null anyway
 spring.security.oauth2.resourceserver.opaquetoken.client-id=test
 spring.security.oauth2.resourceserver.opaquetoken.client-secret= test
 
+
+
+
 # Right client-id -> client1
 # Right client-secret -> abcde12345
+# In production, Infos like client_id and client_secret should be managed by path variables, not hardcoded like i did for this test.
