--- a/api/build.gradle
+++ b/api/build.gradle
@@ -4,6 +4,13 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
+
+springBoot {
+    mainClass = 'com.seupacote.Application'
+}
+
+
+
 group = 'com.raidiam'
 version = '0.0.1-SNAPSHOT'
 description = 'Tech Task for Raidiam Conformance'
@@ -31,6 +38,11 @@ dependencies {
 
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testImplementation 'org.springframework.security:spring-security-test'
+
+    //lombok implementation (for using log.TestInfo and @Slf4j)
+    //compileOnly 'org.projectlombok:lombok'
+    //annotationProcessor 'org.projectlombok:lombok'
+    //testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
 }
 
